--- a/task05/task05.html
+++ b/task05/task05.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Resume</title>
+	<link rel="stylesheet" href="css/style_1.css">
+</head>
+<body>
+	<header>
+		简历
+	</header>
+	<section>
+		<p>基本信息</p>
+		<div class="info">
+			<strong>姓名</strong><span>张三</span><strong>性别</strong><span>男</span><strong>应聘职位</strong><span>web前端工程师</span>	
+		</div>
+	</section>
+	<section>
+		<p>联系方式</p>
+		<address>
+			<strong>手机</strong><span>12312341234</span>
+			<strong>email</strong><a href="#">joinefe@baidu.com</a>
+			<strong>个人主页</strong><a href="#">Github</a>
+		</address>
+	</section>
+	<section>
+		<p>能力描述</p>
+		<dl>
+			<dt>技术能力</dt>
+			<dd>熟练掌握HTML，CSS，JavaScript</dd>
+			<dt>综合能力</dt>
+			<dd>良好的沟通，主动积极，努力勤奋</dd>
+		</dl>
+	</section>
+	<section>
+		<p>教育经历</p>
+		<dl>
+			<dt>本科</dt>
+			<dd>百度前端技术学院小薇学院</dd>
+			<dt>研究生</dt>
+			<dd>百度前端技术学院大斌学院</dd>
+		</dl>
+	</section>
+		<section>
+		<p>项目经历</p>
+		<dl>
+			<dt>小度小度</dt>
+			<dd>作为前端工程师角色参与了ABC组件的开发</dd>
+			<dt>SAN Doc</dt>
+			<dd>作为文档工程师参与了SAN Doc编写</dd>
+		</dl>
+	</section>
+</body>
+</html>
