--- a/task05/index.html
+++ b/task05/index.html
@@ -5,15 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Resume</title>
-	<link rel="stylesheet" href="css/style_1.css">
+<!-- 	<link rel="stylesheet" href="css/style_1.css">
+	<link rel="stylesheet" href="css/style_2.css"> -->
+	<link rel="stylesheet" href="css/style_3.css">
+
 </head>
 <body>
 	<header>
 		简历
 	</header>
-	<section>
+	<section class="info">
 		<p>基本信息</p>
-		<div class="info">
+		<div>
 			<strong>姓名</strong><span>张三</span><strong>性别</strong><span>男</span><strong>应聘职位</strong><span>web前端工程师</span>	
 		</div>
 	</section>
