--- a/task06/index.html
+++ b/task06/index.html
@@ -34,7 +34,7 @@
 	</section>
 	<nav class="main_nav">
 		<div class="wrap">
-			<a href="">HOME</a>
+			<a href="" class="active">HOME</a>
 			<a href="">PROFILE</a>
 			<a href="">ABOUT</a>
 		</div>	
