--- a/task07/index.html
+++ b/task07/index.html
@@ -118,18 +118,19 @@
 <!-- S 学习 -->
 <section class="learn">
 	<div class="wrap">
-		<div class="learn_item">
-			<img src="">
+		<div class="learn_item clearfix">
+			<div class="learn_item_img"></div>
 			<div class="learn_item_info">
-				<h2></h2>
-				<p></p>
+				<h2>Learn How to Improve Your Personal Business</h2>
+				<p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
 			</div>
+			<!-- /介绍 -->
 		</div>
 		<div class="learn_item">
-			<img src="">
+			<div class="learn_item_img"></div>
 			<div class="learn_item_info">
-				<h2></h2>
-				<p></p>
+				<h2>Choose Between Two Beautifully Designed Color Schemes.</h2>
+				<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
 			</div>
 		</div>
 	</div>
@@ -140,21 +141,57 @@
 <section class="crew">
 	<div class="wrap">
 		<div class="crew_info">
-			<h1></h1>
-			<p></p>
+			<h2>Our Awesome Crew</h2>
+			<p>Our unique online teaching style makes learning easy for everyone. Whether you<br> are trying to land a new job, brush up on your skills.</p>
 		</div>
-		<ul class="crew_img">
+		<ul class="crew_img clearfix">
 			<li>
-				<img src="">
+				<img src="img/img_crew_1.jpg">
+				<div class="hover">
+					<div class="hover_wrap">
+						<h2>Ethan Dutton</h2>
+						<p>Senior Visual Designer</p>
+						<div class="hover_icon">
+							<i class="facebook"></i><i class="twitter"></i><i class="instagram"></i>
+						</div>	
+					</div>
+				</div>
 			</li>
 			<li>
-				<img src="">
+				<img src="img/img_crew_2.jpg">
+				<div class="hover">
+					<div class="hover_wrap">
+						<h2>Ethan Dutton</h2>
+						<p>Senior Visual Designer</p>
+						<div class="hover_icon">
+							<i class="facebook"></i><i class="twitter"></i><i class="instagram"></i>
+						</div>	
+					</div>
+				</div>
 			</li>
 			<li>
-				<img src="">
+				<img src="img/img_crew_3.jpg">
+				<div class="hover">
+					<div class="hover_wrap">
+						<h2>Ethan Dutton</h2>
+						<p>Senior Visual Designer</p>
+						<div class="hover_icon">
+							<i class="facebook"></i><i class="twitter"></i><i class="instagram"></i>
+						</div>	
+					</div>
+				</div>
 			</li>
 			<li>
-				<img src="">
+				<img src="img/img_crew_4.jpg">
+				<div class="hover">
+					<div class="hover_wrap">
+						<h2>Ethan Dutton</h2>
+						<p>Senior Visual Designer</p>
+						<div class="hover_icon">
+							<i class="facebook"></i><i class="twitter"></i><i class="instagram"></i>
+						</div>	
+					</div>
+				</div>
 			</li>
 		</ul>
 	</div>
@@ -163,23 +200,29 @@
 
 <!-- S 联系 -->
 <section class="contact">
-	<div class="wrap">
+	<div class="wrap clearfix">
 		<div class="contact_form">
-			<h2></h2>
+			<h2>Fell free to Write Us</h2>
 			<form>
-				<input type="text" name="email">
-				<input type="text" name="subject">
-				<textarea></textarea>
+				<input type="text" name="email" placeholder="E-mail">
+				<input type="text" name="subject" placeholder="Subject">
+				<textarea placeholder="Message"></textarea>
 				<button>SEND</button>
 			</form>
 		</div>
 		<div class="contact_info">
-			<div class="contact_info_til">
-				<h2></h2>
-				<p></p>
-			</div>
+			<h2>Contacts</h2>
+			<p>Make any design your own using the Style Editor. Personalize fonts, colors, and layouts to create the custom look you want.</p>
 			<address>
-				
+				<p>
+					<i class="map"></i>360 King Street<br>Feastrvale Trevose, PA 19057
+				</p>
+				<p>
+					<i class="phone"></i>(755) 564-84-12
+				</p>
+				<p>
+					<i class="mail"></i>youname@mail.com
+				</p>
 			</address>
 		</div>
 	</div>
@@ -188,17 +231,75 @@
 
 <!-- S 尾部 -->
 <footer>
-	<ul>
+	<ul class="menu wrap clearfix">
 		<li>
 			<h3>LEARN MORE</h3>
-			<ul>
+			<ul class="submenu">
 				<li>
 					<a href="">How it works?</a>
+				</li>
+				<li>
+					<a href="">Meeting tools</a>
+				</li>
+				<li>
+					<a href="">Live streaming</a>
+				</li>
+				<li>
+					<a href="">Contact method</a>
+				</li>
+			</ul>
+		</li>
+		<li>		
+			<h3>About Us</h3>
+			<ul  class="submenu">
+				<li>
+					<a href="">About us</a>
+				</li>
+				<li>
+					<a href="">Features</a>
+				</li>
+				<li>
+					<a href="">Privacy police</a>
+				</li>
+				<li>
+					<a href="">Terms&amp;Condition</a>
 				</li>
 			</ul>
 		</li>
 		<li>
-			
+			<h3>Support</h3>
+			<ul  class="submenu">
+				<li>
+					<a href="">F.A.Q.</a>
+				</li>
+				<li>
+					<a href="">Contact us</a>
+				</li>
+				<li>
+					<a href="">Live chat</a>
+				</li>
+				<li>
+					<a href="">Phone call</a>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<h3>Enjoy your Life</h3>
+			<ul  class="submenu">
+				<li>
+					<a href="">Great web UI kit for designers, freelancers or business.</a>
+				</li>
+				<li>
+					<a href="">
+						<i class="twitter"></i>
+						<i class="facebook"></i>
+						<i class="google"></i>
+						<i class="tumbler"></i>
+						<i class="pinterest"></i>
+						<i class="linkedin"></i>
+					</a>
+				</li>
+			</ul>
 		</li>
 	</ul>	
 </footer>
