--- a/task10/index.html
+++ b/task10/index.html
@@ -36,6 +36,9 @@
         </div>
     </div>
     <script>
+        getAllListItem();
+        findAllHtmlSpanInOneSection('news-top');
+        findListItem('news-top', 'JS');
         getActiveLinkContent('news-normal');
 
         function getAllListItem() {
@@ -45,62 +48,38 @@
 
         function findAllHtmlSpanInOneSection(sectionId) {
             // 返回某个section下所有span中内容为HTML的span标签
-            var list = document.getElementById(sectionId).childNodes;
-            findChild(list);
-        }
-
-        function findChild(parent) {
-            var len = parent.length;
-            if (len !== 0) {
-                for (var i = 0; i < len; i++) {
-                    // console.log(parent[i]);
-                    if (parent[i].localName === 'span' && parent[i].innerHTML === 'HTML') {
-                        // return parent[i];
-                        console.log(parent[i]);
-                    } else {
-                        findChild(parent[i].childNodes);
-                    }
+            var sec = document.querySelector('#' + sectionId);
+            var list = sec.querySelectorAll('span');
+            for (var i = 0, len = list.length; i < len; i++) {
+                if (list[i].innerHTML === 'HTML') {
+                    // return list[i];
+                    console.log(list[i]);
                 }
             }
         }
 
         function findListItem(sectionId, spanCont) {
             // 返回某个section下，所有所包含span内容为spanCont的LI标签
-            var list = document.getElementById(sectionId).childNodes;
-            findParent(list, spanCont);
-        }
-
-        function findParent(parent, spanCont) {
-            var len = parent.length;
-            if (len !== 0) {
-                for (var i = 0; i < len; i++) {
-                    if (parent[i].localName === 'span' && parent[i].innerHTML === spanCont) {
-                        console.log(parent[i].parentNode);
-                    } else {
-                        findParent(parent[i].childNodes, spanCont);
-                    }
+            var sec = document.querySelector('#' + sectionId);
+            var list = sec.querySelectorAll('li span');
+            for (var i = 0, len = list.length; i < len; i++) {
+                if (list[i].innerHTML === spanCont) {
+                    console.log(list[i].parentNode);
                 }
+
             }
-        }
+        }    
 
         function getActiveLinkContent(sectionId) {
             // 返回某个section下，class为active的链接中包含的文字内容
-            var list = document.getElementById(sectionId).childNodes;
-            findTxT(list);
+            var sec = document.querySelector('#' + sectionId);
+            var list = sec.querySelectorAll('a.active');
+            for (var i = 0, len = list.length; i < len; i++) {
+                console.log(list[i].innerHTML);
+            }
+          
         }
 
-        function findTxT(parent) {
-            var len = parent.length;
-            if (len !== 0) {
-                for (var i = 0; i < len; i++) {
-                    if (parent[i].localName === 'a' && parent[i].className === 'active') {
-                        console.log(parent[i]);
-                    } else {
-                        findTxT(parent[i].childNodes);
-                    }
-                }
-            }
-        }
     </script>
 </body>
 
